Fix rainviewer on mobile

--- a/style.css
+++ b/style.css
@@ -543,8 +543,10 @@ h1 {
 .leaflet-touch .rainviewer-control a,
 .rainviewer-control a {
   min-width: 30px;
-  width: auto;
+  width: max-content;
   display: flex;
+  border-radius: 0;
+  border-bottom: none;
 }
 .rainviewer-control img {
   height: 22px;
@@ -557,7 +559,6 @@ h1 {
 .rainviewer-control a:last-child {
   border-top-right-radius: 4px;
   border-bottom-right-radius: 4px;
-  border-bottom: none;
 }
 .leaflet-touch .rainviewer-control a:first-child {
   border-top-left-radius: 2px;
@@ -609,6 +610,10 @@ h1 {
 
   #sunrise > div {
     margin: 0;
+  }
+
+  .leaflet-left.leaflet-bottom {
+    margin-bottom: 10px;
   }
 }
 
